@startuml request-managers
title Vault Request Managers
hide empty members

skinparam linetype ortho

skinparam nodesep 25

package core {
    class "Escrow" as PoolEscrow<<pool>>
    class Envoy
    interface IManagerCallFromHub
}

package spoke {
    class Spoke
    class SnapshotQueue
    interface ISpokeRequestManager
}

interface IBaseRequestManager
interface IAsyncRequestManager
interface ISyncManager

IBaseRequestManager -up-|> ISpokeRequestManager

IAsyncRequestManager -up-|> IBaseRequestManager

Envoy --> IManagerCallFromHub

AsyncRequestManager -up-> Spoke
AsyncRequestManager -up-|> IAsyncRequestManager
Spoke -up-> PoolEscrow
Spoke -up-> SnapshotQueue

SyncManager -up-|> ISyncManager
SyncManager -up-|> IManagerCallFromHub
SyncManager -up--> Spoke

VaultRouter -up-> Spoke

@enduml
